# raws

./: .gitignore  README.md  __init__.py  raws.cfg  raws.py  regaws.py  requirements.txt  setup.cfg
.github/workflows/: matrix-test.yml  publish-to-pypi  publish-to-pypi.yml
config/: version_info.cfg
tests/: raws_test.py  raws_test_sample_prof.txt  regaws_test.py
