[metadata]
name = rawscli
version = 0.9.5
description = A simple tool to manage your AWS credentials
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andzhi4/raws
author = Viacheslav Andzhich    
author_email = va.public@protonmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = raws
packages = find:
python_requires = >=3.8

[options.package_data]
config =
    *.cfg

[options.entry_points]
console_scripts =
    raws = raws:main

[bdist_wheel]
universal = True

[coverage:run]
# plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = W503
max-line-length = 120